feat: 更新舞蹈工作室網站的 Docker 配置，調整端口及新增啟動命令

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,11 @@ services:
     container_name: dance-studio-website
     restart: unless-stopped
     ports:
-      - "3001:80"
+      - "3001:5173"
+    volumes:
+      - ./dance-studio-website:/app
+    working_dir: /app
+    command: sh -c "npm install && npm run dev -- --host"
     networks:
       - app-network
   # MySQL (Database)
